--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -1,7 +1,7 @@
 .back-button {
     padding: 4px 12px 4px 12px;
-    color: whitesmoke;
-    background-color: dodgerblue;
+    color: #f0f0ff;
+    background-color: #666699;
     border: none;
     border-radius: 4px;
 }
